--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>龙翔的专属网页</title>
-    <link rel="stylesheet" href="css/myStyle.css">
+    <link rel="stylesheet" href="myStyle.css">
 </head>
 <body>
     <div class="header">
@@ -21,9 +21,9 @@
     <div class="row">
         <div class="side">
             <p><h3>你是ikun吗？</h3></p>
-            <button class="button1"><a href="mp4/kunkun.mp4" target="_blank">是</a></button>
+            <button class="button1"><a href="kunkun.mp4" target="_blank">是</a></button>
             <button class="button2" onclick="alert('不，你是！')">不是</button>
-            <img src="jpg/kunkun.jpg" alt="">
+            <img src="kunkun.jpg" alt="">
         </div>
         <div class="main">
            <table border="1"> 
