--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#">首页</a>
         <a href="#">我的信息</a>
         <a href="#">学习笔记</a>
-        <a href="#" class="right">联系我</a>
+        <a href="particle.html" class="right">点击会有炫酷特效</a>
     </div>
     <div class="row">
         <div class="side">
@@ -29,7 +29,7 @@
            <table border="1"> 
                 <tr>
                     <td><a href="work01/work01.html" target="_blank">第一次作业</a></td>
-                    <td>第二次作业</td>
+                    <td><a href="work02/work02.html" target="_blank">第二次作业</a></td>
                     <td>第三次作业</td>
                     <td>第四次作业</td>
                     <td>第五次作业</td>
