--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <p><pre>花开花落终有时
-                    相逢相聚本无意</pre></p>
+         <p><a href="last.html">期末作业</a></p>
     </div>
     <div class="navbar">  
         <a href="#">首页</a>
